<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".splash.login.LoginActivity"
    android:background="#FFDAB9">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textview_registration_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/please_fill_details"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/layout_all_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include layout="@layout/layout_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintVertical_bias="0.4"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2"/>

            <EditText
                android:id="@+id/edittext_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/your_first_name"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1"
                />

            <EditText
                android:id="@+id/edittext_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/your_last_name"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/edittext_firstname"
                />

            <EditText
                android:id="@+id/edittext_mobile_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/your_mobile_number"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/edittext_lastname"
                />

            <EditText
                android:id="@+id/edittext_date_of_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/your_birth_date"
                android:inputType="date"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/edittext_mobile_number"
                />

            <RadioGroup
                android:id="@+id/radiobutton_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:checkedButton="@id/male"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/edittext_date_of_birth">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"/>

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"/>
            </RadioGroup>

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/your_password"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/radiobutton_gender"
                />

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                app:layout_constraintRight_toRightOf="@id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/edittext_password"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:padding="10dp"
        android:weightSum="1">

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".6"
            android:background="@color/colorAccent"
            android:text="Register Me!"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/edittext_password"/>

    </LinearLayout>
</LinearLayout>